update performence controller
